packages/engine/src/parser/arithmetic-parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

function buildBinaryExpr(head, tail) {
  return tail.reduce(
    (left, [, op, , right]) => ({
      type: "binary",
      op,
      left,
      right,
    }),
    head,
  );
}

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find((s) => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s =
        this.location.source && typeof this.location.source.offset === "function"
          ? this.location.source.offset(s)
          : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = last - s.column || 1;
        str +=
          "\n --> " +
          loc +
          "\n" +
          filler +
          " |\n" +
          offset_s.line +
          " | " +
          line +
          "\n" +
          filler +
          " | " +
          "".padEnd(s.column - 1, " ") +
          "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable, (ch) => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, "\\\\")
          .replace(/"/g, '\\"')
          .replace(/\0/g, "\\0")
          .replace(/\t/g, "\\t")
          .replace(/\n/g, "\\n")
          .replace(/\r/g, "\\r")
          .replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch)),
      );
    }

    function classEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, "\\\\")
          .replace(/\]/g, "\\]")
          .replace(/\^/g, "\\^")
          .replace(/-/g, "\\-")
          .replace(/\0/g, "\\0")
          .replace(/\t/g, "\\t")
          .replace(/\n/g, "\\n")
          .replace(/\r/g, "\\r")
          .replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch)),
      );
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return '"' + literalEscape(expectation.text) + '"';
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) =>
          Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part),
        );

        return (
          "[" +
          (expectation.inverted ? "^" : "") +
          escapedParts.join("") +
          "]" +
          (expectation.unicode ? "u" : "")
        );
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return (
            descriptions.slice(0, -1).join(", ") + ", or " + descriptions[descriptions.length - 1]
          );
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Line: peg$parseLine,
  };
  let peg$startRuleFunction = peg$parseLine;

  const peg$c0 = "//";
  const peg$c1 = "#";
  const peg$c2 = "=";
  const peg$c3 = "in";
  const peg$c4 = "to";
  const peg$c5 = "as";
  const peg$c6 = "OR";
  const peg$c7 = "XOR";
  const peg$c8 = "AND";
  const peg$c9 = "<<";
  const peg$c10 = ">>";
  const peg$c11 = "mod";
  const peg$c12 = "^";
  const peg$c13 = "NOT";
  const peg$c14 = "%";
  const peg$c15 = "off";
  const peg$c16 = "on";
  const peg$c17 = "of";
  const peg$c18 = "(";
  const peg$c19 = ")";
  const peg$c20 = ",";
  const peg$c21 = ".";
  const peg$c22 = "0x";
  const peg$c23 = "0b";

  const peg$r0 = /^[a-zA-Z_]/;
  const peg$r1 = /^[a-zA-Z0-9_]/;
  const peg$r2 = /^[+\-]/;
  const peg$r3 = /^[*\/]/;
  const peg$r4 = /^[a-zA-Z\xB0\xB2\xB3\xB5]/;
  const peg$r5 = /^[a-zA-Z0-9\xB0\xB2\xB3\xB5]/;
  const peg$r6 = /^[0-9]/;
  const peg$r7 = /^[eE]/;
  const peg$r8 = /^[0-9a-fA-F]/;
  const peg$r9 = /^[01]/;
  const peg$r10 = /^[ \t]/;

  const peg$e0 = peg$literalExpectation("//", false);
  const peg$e1 = peg$anyExpectation();
  const peg$e2 = peg$literalExpectation("#", false);
  const peg$e3 = peg$literalExpectation("=", false);
  const peg$e4 = peg$literalExpectation("in", false);
  const peg$e5 = peg$literalExpectation("to", false);
  const peg$e6 = peg$literalExpectation("as", false);
  const peg$e7 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e8 = peg$classExpectation(
    [["a", "z"], ["A", "Z"], ["0", "9"], "_"],
    false,
    false,
    false,
  );
  const peg$e9 = peg$literalExpectation("OR", false);
  const peg$e10 = peg$literalExpectation("XOR", false);
  const peg$e11 = peg$literalExpectation("AND", false);
  const peg$e12 = peg$literalExpectation("<<", false);
  const peg$e13 = peg$literalExpectation(">>", false);
  const peg$e14 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e15 = peg$classExpectation(["*", "/"], false, false, false);
  const peg$e16 = peg$literalExpectation("mod", false);
  const peg$e17 = peg$literalExpectation("^", false);
  const peg$e18 = peg$literalExpectation("NOT", false);
  const peg$e19 = peg$literalExpectation("%", false);
  const peg$e20 = peg$literalExpectation("off", false);
  const peg$e21 = peg$literalExpectation("on", false);
  const peg$e22 = peg$literalExpectation("of", false);
  const peg$e23 = peg$literalExpectation("(", false);
  const peg$e24 = peg$literalExpectation(")", false);
  const peg$e25 = peg$literalExpectation(",", false);
  const peg$e26 = peg$classExpectation(
    [["a", "z"], ["A", "Z"], "\xB0", "\xB2", "\xB3", "\xB5"],
    false,
    false,
    false,
  );
  const peg$e27 = peg$classExpectation(
    [["a", "z"], ["A", "Z"], ["0", "9"], "\xB0", "\xB2", "\xB3", "\xB5"],
    false,
    false,
    false,
  );
  const peg$e28 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e29 = peg$literalExpectation(".", false);
  const peg$e30 = peg$classExpectation(["e", "E"], false, false, false);
  const peg$e31 = peg$literalExpectation("0x", false);
  const peg$e32 = peg$classExpectation(
    [
      ["0", "9"],
      ["a", "f"],
      ["A", "F"],
    ],
    false,
    false,
    false,
  );
  const peg$e33 = peg$literalExpectation("0b", false);
  const peg$e34 = peg$classExpectation(["0", "1"], false, false, false);
  const peg$e35 = peg$classExpectation([" ", "\t"], false, false, false);

  function peg$f0(body) {
    return body;
  }
  function peg$f1(rest) {
    return { type: "comment", text: rest.trim() };
  }
  function peg$f2(rest) {
    return { type: "comment", text: rest.trim() };
  }
  function peg$f3(name) {
    return KNOWN_CONSTANTS.has(name) || KNOWN_FUNCTIONS.has(name);
  }
  function peg$f4(name, expr) {
    return { type: "assignment", name, value: expr };
  }
  function peg$f5() {
    return { type: "empty" };
  }
  function peg$f6(left, target) {
    return { type: "conversion", value: left, targetUnit: target };
  }
  function peg$f7(kw) {
    return KNOWN_BASE_KEYWORDS.has(kw);
  }
  function peg$f8(kw) {
    return kw;
  }
  function peg$f9(head, tail) {
    return buildBinaryExpr(head, tail);
  }
  function peg$f10(head, tail) {
    return buildBinaryExpr(head, tail);
  }
  function peg$f11(head, tail) {
    return buildBinaryExpr(head, tail);
  }
  function peg$f12(head, tail) {
    return buildBinaryExpr(head, tail);
  }
  function peg$f13(head, tail) {
    return buildBinaryExpr(head, tail);
  }
  function peg$f14(head, tail) {
    return buildBinaryExpr(head, tail);
  }
  function peg$f15(base, exp) {
    return { type: "binary", op: "^", left: base, right: exp };
  }
  function peg$f16(expr) {
    return { type: "unary", op: "NOT", value: expr };
  }
  function peg$f17(op, expr) {
    return { type: "unary", op, value: expr };
  }
  function peg$f18(base, target) {
    return { type: "percentOp", op: "off", base, target };
  }
  function peg$f19(base, target) {
    return { type: "percentOp", op: "on", base, target };
  }
  function peg$f20(base, target) {
    return { type: "percentOp", op: "of", base, target };
  }
  function peg$f21(expr) {
    return { type: "percent", value: expr };
  }
  function peg$f22(n, unit) {
    return { type: "numberWithUnit", value: n.value, unit };
  }
  function peg$f23(v, unit) {
    return { type: "expressionWithUnit", expression: v, unit };
  }
  function peg$f24(name, args) {
    return { type: "call", name, args };
  }
  function peg$f25(name, arg) {
    return { type: "call", name, args: [arg] };
  }
  function peg$f26(head, tail) {
    return [head, ...tail.map((t) => t[3])];
  }
  function peg$f27(name) {
    return KNOWN_FUNCTIONS.has(name);
  }
  function peg$f28(name) {
    return name;
  }
  function peg$f29(name) {
    return isUnit(name.replace(/\s+/g, " "));
  }
  function peg$f30(name) {
    return name.replace(/\s+/g, " ");
  }
  function peg$f31(name) {
    return isUnit(name.replace(/\s+/g, " "));
  }
  function peg$f32(name) {
    return name.replace(/\s+/g, " ");
  }
  function peg$f33(name) {
    return isUnit(name);
  }
  function peg$f34(name) {
    return name;
  }
  function peg$f35(word) {
    return ["in", "to", "as", "of", "off", "on", "mod"].includes(word.toLowerCase());
  }
  function peg$f36(keyword) {
    return KNOWN_DATE_LITERALS.has(keyword);
  }
  function peg$f37(keyword) {
    return { type: "date", keyword };
  }
  function peg$f38(ref) {
    return KNOWN_LINE_REFS.has(ref);
  }
  function peg$f39(ref) {
    return { type: "lineRef", ref };
  }
  function peg$f40(name) {
    return KNOWN_CONSTANTS.has(name);
  }
  function peg$f41(name) {
    return { type: "variable", name };
  }
  function peg$f42(expr) {
    return expr;
  }
  function peg$f43(value) {
    return { type: "number", value: parseFloat(value) };
  }
  function peg$f44(digits) {
    return { type: "number", value: parseInt(digits, 16) };
  }
  function peg$f45(digits) {
    return { type: "number", value: parseInt(digits, 2) };
  }
  function peg$f46(value) {
    return { type: "number", value: parseFloat(value) };
  }
  function peg$f47(value) {
    return { type: "number", value: parseInt(value, 10) };
  }
  function peg$f48(name) {
    return { type: "variable", name };
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$resultsCache = {};

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + '".');
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    );
  }

  function error(message, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && typeof peg$source.offset === "function") {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    );
  }

  function peg$parseLine() {
    let s0, s1, s2, s3;

    const key = peg$currPos * 39 + 0;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseComment();
    if (s2 === peg$FAILED) {
      s2 = peg$parseAssignment();
      if (s2 === peg$FAILED) {
        s2 = peg$parseConversion();
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseEmpty();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseComment() {
    let s0, s1, s2, s3, s4;

    const key = peg$currPos * 39 + 1;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e0);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      if (input.length > peg$currPos) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e1);
        }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e1);
          }
        }
      }
      s2 = input.substring(s2, peg$currPos);
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c1;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e2);
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = [];
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e1);
          }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e1);
            }
          }
        }
        s2 = input.substring(s2, peg$currPos);
        peg$savedPos = s0;
        s0 = peg$f2(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseAssignment() {
    let s0, s1, s2, s3, s4, s5, s6;

    const key = peg$currPos * 39 + 2;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      peg$savedPos = peg$currPos;
      s2 = peg$f3(s1);
      if (s2) {
        s2 = peg$FAILED;
      } else {
        s2 = undefined;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 61) {
          s4 = peg$c2;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e3);
          }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parseConversion();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f4(s1, s6);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseEmpty() {
    let s0, s1;

    const key = peg$currPos * 39 + 3;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    peg$savedPos = s0;
    s1 = peg$f5();
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseConversion() {
    let s0, s1, s2, s3, s4, s5;

    const key = peg$currPos * 39 + 4;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseBitwiseOr();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c3) {
          s3 = peg$c3;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e4);
          }
        }
        if (s3 === peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c4) {
            s3 = peg$c4;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e5);
            }
          }
          if (s3 === peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c5) {
              s3 = peg$c5;
              peg$currPos += 2;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$e6);
              }
            }
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseConversionTarget();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f6(s1, s5);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseBitwiseOr();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseConversionTarget() {
    let s0;

    const key = peg$currPos * 39 + 5;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseBaseKeyword();
    if (s0 === peg$FAILED) {
      s0 = peg$parseUnitName();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseBaseKeyword() {
    let s0, s1, s2, s3, s4, s5;

    const key = peg$currPos * 39 + 6;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
